# sandrpod

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  README.zh.md  SECURITY.md  go.mod  go.sum  registry.go
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.poder  Dockerfile.server  Dockerfile.toolbox  Dockerfile.toolbox.centos  docker-compose.local.yml  docker-compose.poder.yml  docker-compose.yml
docs/: ALIYUN_PROVISIONING.md  ARCHITECTURE.md  AUTH_AND_KEYS.md  AWS_PROVISIONING.md  AZURE_PROVISIONING.md  DIGITALOCEAN_PROVISIONING.md  E2B_COMPAT.md  E2B_MCP_COMPAT.md  GCP_PROVISIONING.md  HETZNER_PROVISIONING.md  LOGGING.md  MCP_AUTH.md  MCP_AUTH_HEADER_CONFLICT_FIX.md  MCP_BRIDGE.md  MCP_TRANSPORT_BRIDGE_DESIGN.md  MULTI_INSTANCE_DEPLOYMENT.md  ORACLE_PROVISIONING.md  PERMISSION_AND_AUDIT.md  README.md  ROADMAP.md  SCALING.md  TENCENT_PROVISIONING.md  UPGRADING.md  architecture.html  sandrpod-intro.html
pkg/sdk/python/langchain_sandrpod/: README.md  pyproject.toml
pkg/sdk/python/langchain_sandrpod/examples/: 01_prime_numbers.py  02_sales_analysis.py  03_code_review_and_fix.py  04_personal_mcp.py  README.md
pkg/sdk/python/langchain_sandrpod/langchain_sandrpod/: __init__.py  client.py  sandbox.py
pkg/sdk/python/langchain_sandrpod/tests/: test_client.py  test_sandbox.py
scripts/: gen_tray_icon.py  publish-images.sh
skill/: SKILL.md
(+271 files in other folders)
