[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-sandrpod"
description = "SandrPod sandbox integration for Deep Agents"
license = { text = "MIT" }
version = "0.1.0"
requires-python = ">=3.11,<4.0"

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "deepagents>=0.5.0,<0.6.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["langchain_sandrpod"]

[project.urls]
Homepage = "https://github.com/sandrpod/sandrpod"
Repository = "https://github.com/sandrpod/sandrpod"

[dependency-groups]
test = [
    "pytest>=7.3.0,<10.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "respx>=0.21.0",      # httpx mock library
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
